WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133175
Captions layout incorrectly in fullscreen.
https://bugs.webkit.org/show_bug.cgi?id=133175
Summary
Captions layout incorrectly in fullscreen.
Jeremy Jones
Reported
2014-05-22 01:11:15 PDT
Captions layout incorrectly in fullscreen.
Attachments
Patch
(2.74 KB, patch)
2014-05-22 01:20 PDT
,
Jeremy Jones
eric.carlson
: review+
Details
Formatted Diff
Diff
Patch
(5.28 KB, patch)
2014-05-22 11:01 PDT
,
Jeremy Jones
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jeremy Jones
Comment 1
2014-05-22 01:20:25 PDT
Created
attachment 231868
[details]
Patch
Jeremy Jones
Comment 2
2014-05-22 01:21:07 PDT
radar://16923830
Eric Carlson
Comment 3
2014-05-22 06:36:42 PDT
Comment on
attachment 231868
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=231868&action=review
> Source/WebCore/html/shadow/MediaControlElements.cpp:1366 > setInlineStyleProperty(CSSPropertyWidth, m_videoDisplaySize.size().width(), CSSPrimitiveValue::CSS_PX); > setInlineStyleProperty(CSSPropertyHeight, m_videoDisplaySize.size().height(), CSSPrimitiveValue::CSS_PX); > + setInlineStyleProperty(CSSPropertyPosition, CSSValueAbsolute); > + setInlineStyleProperty(CSSPropertyLeft, 0, CSSPrimitiveValue::CSS_PX); > + setInlineStyleProperty(CSSPropertyTop, 0, CSSPrimitiveValue::CSS_PX);
Nit: this should be in a member function instead of being duplicated here and in updateTimerFired.
Jeremy Jones
Comment 4
2014-05-22 11:01:22 PDT
Created
attachment 231896
[details]
Patch
WebKit Commit Bot
Comment 5
2014-05-22 18:05:16 PDT
Comment on
attachment 231896
[details]
Patch Clearing flags on attachment: 231896 Committed
r169234
: <
http://trac.webkit.org/changeset/169234
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug