Captions layout incorrectly in fullscreen. https://bugs.webkit.org/show_bug.cgi?id=133175

Patch by Jeremy Jones <jeremyj@apple.com> on 2014-05-22
Reviewed by Eric Carlson.

When doing layout for fullscreen, geometry should be absolute so it is not influenced
by the rest of the page. This change adds style for CSSPropertyPosition, CSSPropertyLeft,
and CSSPropertyTop.

* html/shadow/MediaControlElements.cpp:
(WebCore::MediaControlTextTrackContainerElement::updateDisplay):
Refactor style changes into updateStyleForTextTrackRepresentation().
(WebCore::MediaControlTextTrackContainerElement::updateTimerFired):
Refactor style changes into updateStyleForTextTrackRepresentation().
(WebCore::MediaControlTextTrackContainerElement::clearTextTrackRepresentation):
Refactor style changes into updateStyleForTextTrackRepresentation().
(WebCore::MediaControlTextTrackContainerElement::updateStyleForTextTrackRepresentation):
Consolidate style changes here. Include the two existing and three new style changes.
* html/shadow/MediaControlElements.h:
Declare updateStyleForTextTrackRepresentation().

Canonical link: https://commits.webkit.org/151209@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169234 268f45cc-cd09-0410-ab3c-d52691b4dbfc